tests/NormalTests/paczka1/fuzzy1/65312544.err
Error in line 35: TgdHINwKL S722 02,7
Error in line 36: RctHA4rU S7RR 78,9
Error in line 24: S561 S967 49,7
